@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-24T16:10:00Z",
-  "count_outdated" : 1001,
-  "uniques_outdated" : 633,
-  "count" : 1022,
-  "uniques" : 648,
+  "timestamp" : "2023-09-25T08:12:26Z",
+  "count_outdated" : 1002,
+  "uniques_outdated" : 634,
+  "count" : 1024,
+  "uniques" : 650,
   "clones" : [
-    {
-      "timestamp": "2023-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 2,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
