@@ -1,12 +1,7 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-09-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 2,
@@ -56,6 +51,11 @@
       "timestamp": "2023-09-24T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-25T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
