@@ -1,3 +1,12 @@
+2023-09-25T08:12:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6296654826 # 1192
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
+* notice: last 14d: unq all: 3 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 633 1001 / 648 1022
+* notice: next accum: outdated-unq outdated-all / unq all: 634 1002 / 650 1024
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2023-09-11] / [2023-09-25]
+
 2023-09-24T16:10:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6291081351 # 1190
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
